@@ -23,7 +23,6 @@ jobs:
 
       - name: Setup Environment
         run: |
-          git fetch
           python3 -m pip install dmgbuild
       
       - name: Build SYNERGY
@@ -31,6 +30,7 @@ jobs:
           CMAKE_PREFIX_PATH: "${{ env.Qt5_DIR }};${{ env.OpenSSL_DIR }}"
         run: |
           export PATH="$Qt5_DIR/bin:$PATH"
+          python3 CI/build_version.py
           mkdir build
           cd build
           cmake \
@@ -40,11 +40,10 @@ jobs:
             -DCMAKE_CONFIGURATION_TYPES=Release ..
           . ./version
           make -j
-      
+
       - name: Version Info
         id: version
         run: |
-          python3 CI/build_version.py
           . ./build/version
           SYNERGY_VERSION="${SYNERGY_VERSION_MAJOR}.${SYNERGY_VERSION_MINOR}.${SYNERGY_VERSION_PATCH}"
           SYNERGY_REVISION=$(git rev-parse --short=8 HEAD)
@@ -66,10 +65,11 @@ jobs:
             SYNERGY_REMOTE_FOLDER="synergy-core/v1-core-standard/${SYNERGY_VERSION}/${SYNERGY_VERSION_STAGE}/b${SYNERGY_VERSION_BUILD}-${SYNERGY_REVISION}"
           fi
           SYNERGY_DMG_FILENAME="${SYNERGY_PACKAGE_NAME}_${SYNERGY_DMG_VERSION}_macos-10.13_x86-64.dmg"
+          echo "SYNERGY_REMOTE_FOLDER: $SYNERGY_REMOTE_FOLDER"
           echo "::set-output name=SYNERGY_REMOTE_FOLDER::$SYNERGY_REMOTE_FOLDER"
           echo "::set-output name=SYNERGY_PACKAGE_NAME::$SYNERGY_PACKAGE_NAME"
           echo "::set-output name=SYNERGY_DMG_FILENAME::$SYNERGY_DMG_FILENAME"
-        
+
       - name: Sign applicaiton
         run: |
           export PATH="$Qt5_DIR/bin:$PATH"
@@ -93,7 +93,7 @@ jobs:
           md5 -r $SYNERGY_DMG_FILENAME >> $SYNERGY_DMG_FILENAME.checksum.txt
           shasum $SYNERGY_DMG_FILENAME >> $SYNERGY_DMG_FILENAME.checksum.txt
           shasum -a 256 $SYNERGY_DMG_FILENAME >> $SYNERGY_DMG_FILENAME.checksum.txt
-        
+
       - name: Submit for Notarization
         env:
           ASC_USERNAME: ${{ secrets.ASC_USERNAME }}
@@ -104,7 +104,7 @@ jobs:
         run: |
           cd pkg
           ../CI/MacOS/notorize.sh
-        
+
       - name: Send package to Sandor
         env:
           HOST: ${{ secrets.SANDOR_HOST }}
